Fix dark mode segmented background

--- a/src/style.css
+++ b/src/style.css
@@ -129,6 +129,10 @@
         color: #6e6e6d !important;
     }
 
+    .sp-container .segmented {
+        background: #363633;
+    }
+
     .sp-container .segmented-highlight {
         background-color: #505051 !important;
     }
